fix: adjust nomenclature
