# app/Http/Requests/GetPrizeDrawRequest.php
@@ -1,0 +1,58 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Http\Exceptions\HttpResponseException;
+use Symfony\Component\HttpFoundation\Response;
+use Illuminate\Contracts\Validation\Validator;
+
+
+class GetPrizeDrawRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+
+    public function prepareForValidation(){
+        $this->merge([
+            'id' => $this->route('prize_draw')
+        ]);
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'id' => 'required|integer|exists:prize_draws,id',
+        ];
+    }
+
+    /**
+    * Get the error messages for the defined validation rules.*
+    * @return array
+    */
+    protected function failedValidation(Validator $validator)
+    {
+        $error_messages = $validator->errors()->all();
+        throw new HttpResponseException(
+            response()->json(
+                [
+                    'message' => $error_messages,
+                ],
+                Response::HTTP_UNPROCESSABLE_ENTITY
+            )
+        );
+    }
+}
